Finished first wevsite

--- a/index.html
+++ b/index.html
@@ -8,16 +8,44 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section>
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Saleheen's</span> Website</h1>
+            <h1><span class="text-highlight">Saleheen's</span> Website</h1>
             <h3>Professional Web Development Expert</h3>
-            <p>Web development is a great career choice. One can either be a front-end developer or a back-end developer, or even both. Every developer should have a general programming skill set to begin your career in the web world. Currently, skilled web-developers enjoy great demand in the job market.</p>
+            <p>Web development is a great career choice. One can either be a front-end developer or a back-end developer, or even both. Every developer should have a general programming skill set to begin your career in the web world.</p>
+            <a class="link-button" href="https://www.programming-hero.com/" target="_blank" rel="noopener noreferrer">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/profile1.png" alt="developer image">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Dream BIG</h2>
+            <h3>Become a renowned Web Developer</h3>
+            <p>Currently, skilled web-developers enjoy great demand in the job market,and one can easily make a six-figure income by working as a web developer. According to Indeed.com, the average entry-level front end web developer makes $61,512 a year.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/authwall?trk=ripf&trkInfo=AQHmy82nQrQgLwAAAXMK2LDAOCzr3e6RJlrorhFe9ozLbzqy2u_C-r0UqCVVbjU4g9y73Hx25RcXcsmsI7GYmDW7dZGjj8Dk66gEebr2uq8yLSL2AGbV1_lqioPn3Ln72voDIKg=&originalReferer=https://www.google.com/&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fin%2Fjhankar">Find out Hero</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="text-highlight">2021 Present | Pro Level Developer</h3>
+            <p>A full stack web developer is a person who can develop both client and server software. In addition to mastering HTML and CSS, he/she also knows how to: Program a browser (like using JavaScript, jQuery, Angular, or Vue) js, Django, Laravel, Rails, and Android SDK are the most popular tools in the category.</p>
+        </div>
+        <div id="baby" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="text-highlight">2020-2021 | Programming Hero Learner</h3>
+            <p>A junior web developer works with a team of developers to create new websites and applications. The junior designation means you work under the supervision of senior developers in your department, but you may be involved in all stages of the project, from brainstorming to final testing.</p>
+        </div>
+    </section>
+    <footer>
+        <p>© Saleheen 2022, all rights reserved.</p>
+    </footer>
 </body>
 </html>
